# CAD

./: flight_and_contrail.py  pyproject.toml
data/: ERA5_2019_04_28_19_00.nc  metadata_contrail.csv
data/4258404969592519689/: human_pixel_masks.npy
